--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
   },
   "homepage": "https://github.com/Sighmir/altvrp-views#readme",
   "_moduleAliases": {
-    "@pages": ".next/pages",
-    "@modules": ".next/modules"
+    "components": ".next/components",
+    "pages": ".next/pages",
+    "modules": ".next/modules",
+    "styles": ".next/styles"
   },
   "devDependencies": {
     "@altv/types-webview": "^1.0.2",
-    "@types/react": "^17.0.19",
     "@types/node": "^16.7.5",
+    "@types/react": "^17.0.19",
     "@types/styled-components": "^5.1.13",
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.2"
