--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,10 @@
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "paths": {
-      "@modules/*": ["./modules/*"],
-      "@pages/*": ["./pages/*"],
+      "components/*": ["./components/*"],
+      "modules/*": ["./modules/*"],
+      "pages/*": ["./pages/*"],
+      "styles/*": ["./styles/*"],
     },
     "baseUrl": ".",
     "allowJs": true,
