--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "modules/*": ["./modules/*"],
       "pages/*": ["./pages/*"],
       "styles/*": ["./styles/*"],
+      "data/*": ["./data/*"],
     },
     "baseUrl": ".",
     "allowJs": true,
@@ -19,6 +20,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "downlevelIteration": true,
     "jsx": "preserve"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
