--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "alt:V RP framework frontend",
   "private": true,
   "scripts": {
-    "dev": "npx next dev",
-    "build": "npx next build",
-    "start": "npx next start",
-    "lint": "npx next lint"
+    "lint": "eslint */**/*.{js,ts,tsx,json} --fix",
+    "next:dev": "npx next dev",
+    "next:build": "npx next build",
+    "next:start": "npx next start",
+    "next:lint": "npx next lint"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,8 @@
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
     "typescript": "4.4.2"
   },
   "dependencies": {
@@ -43,5 +46,15 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,json}": [
+      "eslint --fix"
+    ]
   }
 }
